Changes on version 1.0.3 (current):
- Add CGRect creation & modification.

Changes on version 1.0.2:
- Added prev & next indexes array getters from source.

Changes on version 1.0.1:
- Move to root tests XCode project.

Changes on version 1.0.0:
- Stable release.

Changes on version 0.1.17:
- NSString check lower and upper case debug fix.

Changes on version 0.1.16:
- Wrap all headers with preprocessor defines.

Changes on version 0.1.14:
- NSObject dynamic properties.

Changes on version 0.1.12:
- NSData serialise and deserialise with binary data.

Changes on version 0.1.11:
- NSMutableArray safe append and prepend functionality.

Changes on version 0.1.10:
- NSData lzma compression/decompression.

Changes on version 0.1.6:
- NSData zip compression/decompression.

Changes on version 0.1.2:
- Additional import of the standart frameworks.

Changes on version 0.1.1:
- NSData base functions.

Changes on version 0.1.0:
- Initial release.